--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 <h2 id="integrantes">Integrantes</h2>
 <ul>
 <li>
-<p>Alex Sandro Mendes Tostes <code>Curso - Programa</code></p>
+<p>Alex Sandro Mendes Tostes <code>Doutorado - CTE</code></p>
 </li>
 <li>
 <p>Fernanda Moreira Serra Teixeira <code>Curso - Programa</code></p>
