--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 <p>Lila Pénélope Lou Kacedan - França <code>Curso - Programa</code></p>
 </li>
 <li>
-<p>Edson Aníbal de Aquino Guedes Filho <code>Curso - Programa</code></p>
+<p>Edson Aníbal de Aquino Guedes Filho <code>Doutorado - Programa</code></p>
 </li>
 <li>
 <p>Francisco Henrique Figueiredo Araujo, Cap Eng Pgpao <code>Mestrado - CTE</code></p>
