--- a/index.html
+++ b/index.html
@@ -78,10 +78,7 @@
 <p>Fernanda Moreira Serra Teixeira <code>Curso - Programa</code></p>
 </li>
 <li>
-<p>Lila Pénélope Lou Kacedan - França <code>Curso - Programa</code></p>
-</li>
-<li>
-<p>Edson Aníbal de Aquino Guedes Filho <code>Doutorado - Programa</code></p>
+<p>Edson Aníbal de Aquino Guedes Filho <code>Doutorado - EIA-T</code></p>
 </li>
 <li>
 <p>Francisco Henrique Figueiredo Araujo, Cap Eng Pgpao <code>Mestrado - CTE</code></p>
